sorted alignment issue for target date settings

--- a/app/stylesheets/partials/_events.scss
+++ b/app/stylesheets/partials/_events.scss
@@ -9,6 +9,7 @@
   border: 2px solid $border-color;
   @include border-radius;
   padding-top: 9px;
+  line-height:1;
 
   h1,h2 {
     font-size: 13px;
